# catkin_ws

./: .gitignore  .md  .tmp_check_bagtime_full.py  .tmp_check_episode_ranges.py  .tmp_check_rosbag.py  .tmp_convert_lerobot.sh  AGENTS.md  DOCKER_SETUP_README.md  DOCS.md  LAUNCH_RUNBOOK.md  LAUNCH_RUNBOOK_CN.md  README.md  README_burst_monitor.md  RUNBOOK_3ARM_INTERVENTION.md  Train.ipynb  WORKSPACES.md  ba.md  ba_draft.md  find_all_camera_port.sh  libusb-1.0-0-dev_2%3a1.0.27-1_amd64.deb  runbook_new.md  samples.npz  test.npz  wrist_camera.md  瞎写的(BA).md  瞎写的(JAMES).md
devel/: .catkin  local_setup.sh
src/piper_ros/src/piper_x_description/: CMakeLists.txt  package.xml
src/piper_ros/src/piper_x_description/urdf/: piper_x_description.xacro  piper_x_description_d435.urdf  piper_x_description_d435_dark.urdf
src/zeno-wholebody-intervation/: README.md  README_CN.md
tools/: burst_batch_ros1.py  burst_detect_ros1.py  burst_sweep_ros1.py
tools/tests/: test_apriltag_video_origin_solver.py  test_burst_detect_ros1.py  test_wrist_handeye_pipeline.py
workspaces/: LAUNCH_RUNBOOK.md  LAUNCH_RUNBOOK_CN.md  README.md  RUNBOOK_3ARM_INTERVENTION.md  requirements_train_act_freeze_2026-02-19.txt
workspaces/scripts/: build_librealsense_rsusb_250.sh  build_robot_ws.sh  build_teleop_ws.sh  convert_lerobot_to_rosbag.sh  convert_lerobot_to_rosbag_uv.sh  convert_lerobot_uv.sh  deploy_attnmap_helper.py  estimate_camera_origin_from_apriltag_video.py  extract_teleop_segments.py  fake_policy_loop.py  filter_gravity_logs.sh  install_opp_camera_udev_rule.sh  intervention_3arm_switch_test.py  (+24 more)
(+270 files in other folders)
