<package format="2">
  <name>piper_x_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF description package for Piper X.</p>
    <p>Contains meshes and URDF assets used by the zeno whole-body stack.</p>
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>

  <export>
    <architecture_independent />
  </export>
</package>
